--- a/components/result/result.html
+++ b/components/result/result.html
@@ -40,6 +40,7 @@
                             <dt>竞拍底价 :</dt> <dd> {{basePrice}} 元 </dd>
                             <dt>座位数 :</dt> <dd> {{seat}} 个 </dd>
                             <!-- <dt>竞拍结束时间 :</dt> <dd> 2017-08-07  21:50 </dd> -->
+                            <dt v-if="lucynumberisshow">幸运号 :</dt> <dd class="text-navy"> {{lucynumber}}</dd>
                         </dl>
                     </div>
                 </div>
@@ -53,18 +54,22 @@
                                     <div class="col-sm-9 m-b-xs">
                                         <h3>本次航拍竞拍结果</h3>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <p class="pull-right">
+                                    <button type="button" class="btn btn-primary btn-sm" onclick="history.go(0)">刷新结果</button>
+                                    <button type="button" class="btn btn-primary btn-sm" onclick="history.go(-1)">返回</button>
+                                    </p>
+                                    <!-- <div class="col-sm-3">
                                         <div class="input-group">
                                             <input type="text" placeholder="Search" class="input-sm form-control"> 
                                             <span class="input-group-btn">
                                                 <button type="button" class="btn btn-sm btn-primary"> Go!</button> 
                                             </span>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <br />
                                 <div class="row">
-                                    <template>
+                                    <template v-if="lucynumberisshow">
                                         <el-table :data="tableData" style="min-width: 100%">
                                         <el-table-column prop="name" label="姓名" style="min-width: auto">
                                         </el-table-column>
@@ -72,10 +77,22 @@
                                         </el-table-column>
                                         <el-table-column prop="seat" label="座位号" style="min-width: auto">
                                         </el-table-column>
-                                            <el-table-column prop="price" label="出价(元)" style="min-width: auto">
-                                            </el-table-column>
-                                            <el-table-column prop="paid" label="是否支付" style="min-width: auto">
-                                            </el-table-column>
+                                        <!-- <br />
+                                        <el-pagination :current-page.sync="currentPage" :page-size="10" layout="total, prev, pager, next" :total="totalValue">
+                                        </el-pagination> -->
+                                    </template>
+                                    <template v-else>
+                                        <el-table :data="tableData" style="min-width: 100%">
+                                        <el-table-column prop="name" label="姓名" style="min-width: auto">
+                                        </el-table-column>
+                                        <el-table-column prop="tel" label="手机号" style="min-width: auto">
+                                        </el-table-column>
+                                        <el-table-column prop="seat" label="座位号" style="min-width: auto">
+                                        </el-table-column>
+                                        <el-table-column prop="price" label="出价(元)" style="min-width: auto">
+                                        </el-table-column>
+                                        <el-table-column prop="paid" label="是否支付" style="min-width: auto">
+                                        </el-table-column>
                                         </el-table>
                                     </template>
                                 </div>
