--- a/components/fightsList/fightslist.html
+++ b/components/fightsList/fightslist.html
@@ -2,14 +2,26 @@
 <%-head %>
 
 <body class="gray-bg">
-
 <div id="app">
             <div class="wrapper wrapper-content">
             <div class="container">
 <div class="row">
     <div class="col-lg-12">
         <div class="ibox float-e-margins">
-            <br />
+            <div class="ibox-content">
+                    <!-- <el-menu :default-active="activeIndex" class="el-menu-demo" mode="horizontal" @select="handleSelect" style="background-color:rgb(26,179,148)"> -->
+                    <el-menu :default-active="activeIndex" class="el-menu-demo" mode="horizontal" @select="handleSelect" theme="dark">
+                        <!-- <el-menu-item index="1">全部竞拍</el-menu-item> -->
+                        <el-menu-item index="1">提前竞拍</el-menu-item>
+                        <el-menu-item index="2">值机前竞拍</el-menu-item>
+                        <el-menu-item index="3">登机后竞拍</el-menu-item>
+                </el-menu>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-12">
+        <div class="ibox float-e-margins">
             <div class="ibox-title">
                 <div class="row">
                 <div class="col-sm-8"> 
@@ -28,13 +40,9 @@
 
             <div class="ibox-content">
                 <div class="table-responsive">
-                    <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
-                        <!-- <br /> -->
-                        <!-- <div id="DataTables_Table_0_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control input-sm" placeholder="" aria-controls="DataTables_Table_0"></label></div><div class="dataTables_info" id="DataTables_Table_0_info" role="status" aria-live="polite"></div><table class="table table-striped table-bordered table-hover dataTables-example dataTable" id="DataTables_Table_0" aria-describedby="DataTables_Table_0_info" role="grid"> -->
-                        <!-- <br /> -->
-
+                    <!-- <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"> -->
                         <template>
-                            <el-table :data="tableData" style="min-width: 100%" :default-sort="{prop: 'date', order: 'descending'}">
+                            <el-table :data="tableData" stripe style="min-width: 100%" :default-sort="{prop: 'date', order: 'descending'}" height="100%">
                             <el-table-column prop="date" label="日期" sortable style="min-width: auto">
                             </el-table-column>
                             <el-table-column prop="flight" label="航班号" sortable style="min-width: auto">
@@ -59,31 +67,33 @@
                                         size="small"
                                         @click="clickCheck(scope.$index, scope.row)">查看</el-button>
                                     <el-button
-                                        size="small"
+                                        size="small" :disabled="scope.row.operate"
                                         @click="clickEdit(scope.$index, scope.row)">编辑</el-button>
                                 </template>
                             </el-table-column>
 
                             </el-table>
                         </template>
-                    </table>
+                    <!-- </table> -->
                     <br />
 
                     <div class="col-sm-9 m-b-xs">
                         <template> 
                         <div class="block"> 
-                            <el-pagination :page-size="10" layout="total, prev, pager, next" :total="totalValue">
+                            <!-- <el-pagination :page-size="10" layout="total, prev, pager, next" :total="totalValue"> -->
+                            <el-pagination layout="total, prev, pager, next" :total="totalValue">
                             </el-pagination>
                         <!-- <div class="dataTables_paginate paging_simple_numbers" id="DataTables_Table_0_paginate"><ul class="pagination"><li class="paginate_button previous disabled" id="DataTables_Table_0_previous"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="0" tabindex="0">Previous</a></li><li class="paginate_button active"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="1" tabindex="0">1</a></li><li class="paginate_button next disabled" id="DataTables_Table_0_next"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="2" tabindex="0">Next</a></li></ul></div></div> -->
                         </div> 
                         </template> 
                     </div>
                     <p class="pull-right"> 
-                       <button type="button" class="btn btn-primary btn-sm" onclick="history.go(0)">刷新</button>
+                       <!-- <button type="button" class="btn btn-primary btn-sm" onclick="history.go(0)">刷新</button> -->
+                       <button type="button" class="btn btn-primary btn-sm" @click="reflash()">刷新</button>
                        <button type="button" class="btn btn-primary btn-sm" onclick="history.go(-1)">返回</button>
                     </p> 
 
-                </div>
+                <!-- </div> -->
             </div>
         </div>
     </div>
@@ -97,7 +107,7 @@
                 <el-option label="第二价竞拍" value="2"></el-option>
                 <el-option label="热度竞拍" value="3"></el-option>
                 <el-option label="超售竞拍" value="4"></el-option>
-                <el-option label="提前竞拍" value="5"></el-option>
+                <el-option label="多轮竞拍" value="5"></el-option>
                 <el-option label="幸运竞拍" value="6"></el-option>
             </el-select>
         </el-form-item>
