--- a/components/result/result.html
+++ b/components/result/result.html
@@ -4,7 +4,7 @@
 <body class="gray-bg">
 
 <div id="app">
-    <div class="wrapper wrapper-content">
+    <!-- <div class="wrapper wrapper-content"> -->
     <div class="container">
 
     <div class="row"> 
@@ -48,7 +48,7 @@
                 <!-- 结果列表 -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="ibox float-e-margins">
+                        <!-- <div class="ibox float-e-margins"> -->
                             <div class="ibox-content">
                                 <div class="row">
                                     <div class="col-sm-9 m-b-xs">
@@ -97,7 +97,7 @@
                                     </template>
                                 </div>
                             </div>
-                        </div>
+                        <!-- </div> -->
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
     </div>
 
     </div>
-    </div>
+    <!-- </div> -->
 </div>
 </body>
 
